Changed some of the style to try to correct layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 
 h1 {
-	color: #778899;
+	color: hsl(209, 12%, 39%);
 	background-color: #99A6B2;
-	width: 60%;
+	margin: 0px;
+	width: 40%;
 	text-align: left;
 	display: inline-block;
 }
@@ -13,7 +14,6 @@ body {
 
 .button {
 	display: inline-block;
-	margin: 5px;
 	padding: 15px 25px;
 	font-size: 24px;
 	cursor: pointer;
